--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
 
 
-  <meta name="date" content="2020-10-25" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -3121,7 +3120,7 @@ slide:not(.current) .plotly.html-widget{
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">10/25/2020</p>
+            <p style="margin-top: 6px; margin-left: -2px;">31 October, 2020</p>
           </hgroup>
   </slide>
 
